# OpenGl-Vscode

./: .gitignore  CMakeLists.txt  CMakePresets.json
libraries/GLAD-x86_64/include/glad/: glad.h
libraries/GLAD-x86_64/src/: glad.c
src/: main.cpp
